Enforce line length to 120 characters

--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -350,7 +350,8 @@
                                         
                                         <CheckBox 
                                                 x:Name="IncludeAllSubfoldersCheckBox"  
-                                                Content="Include all subfolders when monitoring a folder? (Choose per folder)"
+                                                Content=
+                                            "Include all subfolders when monitoring a folder? (Choose per folder)"
                                                 IsChecked="{Binding Mode=TwoWay, Path=IncludeAllSubfolders}"
                                                 Click="IncludeAllSubfoldersCheckBox_Click"/>
                                     </StackPanel>
@@ -444,7 +445,8 @@
                                             </GridView.ColumnHeaderContainerStyle>
                                             <GridViewColumn 
                                                 DisplayMemberBinding="{Binding Path}" 
-                                                Width="{Binding ActualWidth, ElementName=MovedOrRenamedFilesDisplayed}"/>
+                                                Width=
+                                                "{Binding ActualWidth, ElementName=MovedOrRenamedFilesDisplayed}"/>
                                         </GridView>
                                     </ListView.View>
                                 </ListView>
