Fix data binding - IgnorableFoldersDisplayed should be bound to the DTO "Name" property, not "Path"

--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -361,7 +361,7 @@
                         
                         <Border Style="{StaticResource MainBorderStyle}"
                                 Grid.Column="1"
-                                Grid.Row="0">
+                                Grid.RowSpan="2">
                             
                             <Grid>
                                 <Border Style="{StaticResource HeaderStyle}"
@@ -382,7 +382,7 @@
                                             Content="Remove" 
                                             Click="RemoveIgnorableFolder_Click"
                                             IsEnabled="{
-                                                Binding ElementName=BackupPathsDisplayed, 
+                                                Binding ElementName=IgnorableFoldersDisplayed, 
                                                 Path=SelectedIndex, 
                                                 Converter={StaticResource 
                                                 IntToBoolValueConverter}}" 
@@ -401,7 +401,7 @@
                                                 </Style>
                                             </GridView.ColumnHeaderContainerStyle>
                                             <GridViewColumn 
-                                                DisplayMemberBinding="{Binding Path}" 
+                                                DisplayMemberBinding="{Binding Name}" 
                                                 Width="{Binding ActualWidth, ElementName=IgnorableFoldersDisplayed}"/>
                                         </GridView>
                                     </ListView.View>
