--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -9,7 +9,8 @@
         MinHeight="600" 
         MinWidth="800" 
         WindowState="Maximized" 
-        MouseDown="Window_MouseDown">
+        MouseDown="Window_MouseDown"
+        Loaded="Window_Loaded">
 
     <Window.Resources>
         <valueConverters:IntToBoolValueConverter x:Key="IntToBoolValueConverter" />
@@ -122,24 +123,27 @@
                                         Style="{StaticResource MultiButtonStyle}"/>
 
                             </StackPanel>
-
-                            <ListView x:Name="FilesDisplayed"  
+                            
+                            <Grid x:Name="FilesDisplayedGrid">
+                                <ListView x:Name="FilesDisplayed"  
                                       Style="{StaticResource ListViewStyle}"
                                       ItemsSource="{Binding SourceFiles}" >
 
-                                <ListView.View>
-                                    <GridView AllowsColumnReorder="False">
-                                        <GridView.ColumnHeaderContainerStyle>
-                                            <Style TargetType="{x:Type GridViewColumnHeader}">
-                                                <Setter Property="Visibility" Value="Collapsed" />
-                                            </Style>
-                                        </GridView.ColumnHeaderContainerStyle>
-                                        <GridViewColumn 
-                                            DisplayMemberBinding="{Binding Path}" 
-                                            Width="{Binding ActualWidth, ElementName=FilesDisplayed}"/>
-                                    </GridView>
-                                </ListView.View>
+                                    <ListView.View>
+                                        <GridView AllowsColumnReorder="False">
+                                            <GridView.ColumnHeaderContainerStyle>
+                                                <Style TargetType="{x:Type GridViewColumnHeader}">
+                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                </Style>
+                                            </GridView.ColumnHeaderContainerStyle>
+                                            <GridViewColumn 
+                                                DisplayMemberBinding="{Binding Path}" 
+                                                Width="{Binding ActualWidth, ElementName=FilesDisplayed}"/>
+                                        </GridView>
+                                    </ListView.View>
                             </ListView>
+                            </Grid>
+
                         </Grid>
                     </Border>
                     
