--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:valueConverters="clr-namespace:FileMonitor.ValueConverters"
+        xmlns:valueConverters="clr-namespace:FileMonitor.Helpers"
         mc:Ignorable="d"
         Title="FileMonitor" 
         MinHeight="600" 
