--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -68,7 +68,26 @@
             <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
             <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         </Style>
-        
+
+        <!--
+        THIS CODE IS TO TEST USING A HierarchicalDataTemplate
+        -->
+        <HierarchicalDataTemplate
+            x:Key="TreeViewItemTemplate"
+            ItemsSource="{Binding Children, Mode=OneTime}" >
+            <StackPanel Orientation="Horizontal">
+                <CheckBox
+                    Focusable="False"
+                    IsChecked="{Binding DisplayCheckBox}"
+                    VerticalAlignment="Center">
+                </CheckBox>
+                <ContentPresenter
+                    Content="{Binding NodeItem}">
+                </ContentPresenter>
+            </StackPanel>
+           
+        </HierarchicalDataTemplate>
+
     </Window.Resources>
 
     <Grid>
@@ -301,11 +320,11 @@
                                     </GridView>
                                 </ListView.View>
                             </ListView>-->
+
                             <TreeView 
                                 x:Name="BackupPathsDisplayed"
                                 Style="{StaticResource TreeViewStyle}"
                                 ItemsSource="{Binding BackupPaths.FileTreeItems}">
-                                
                             </TreeView>
                         </Grid>
                     </Border>
