Fix issue where designer is stretched horizontally - Replace minheight/minwidth properties with height/width properties to prevent the designer view from stretching infinitely

--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:valueConverters="clr-namespace:FileMonitor.Helpers"
         mc:Ignorable="d"
         Title="FileMonitor" 
-        MinHeight="600" 
-        MinWidth="800" 
+        Height="720" 
+        Width="1280" 
         WindowState="Maximized" 
         MouseDown="Window_MouseDown">
 
