Bind the CheckBox IsChecked property to the IsChecked property on IPathNode

--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -85,9 +85,9 @@
                     Source="Images/file-gray-20x20px.png"/>
                 <TextBlock Text="{Binding Text}" />
                 <CheckBox
-                    Visibility="{Binding DisplayCheckBox, Mode=TwoWay, Converter={StaticResource boolToVisibilityConverter}}"
+                    Visibility="{Binding DisplayCheckBox, Converter={StaticResource boolToVisibilityConverter}}"
                     Focusable="False"
-                    IsChecked="False"
+                    IsChecked="{Binding IsChecked}"
                     VerticalAlignment="Center">
                 </CheckBox>
 
